# vlr-api

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  PROGRESS.md  README.md  TEAM_TREND_SPEC.md  pyproject.toml  start-services.sh
.claude/: BACKFILL_RESULTS_SPEC.md  SPEC.md  STATUS_DASHBOARD_SPEC.md  settings.json
app/: main.py  status_meta.py
app/api/: status_html.py
app/api/v1/: routes.py  routes_cs2.py
app/core/: cache.py  config.py  db.py  http.py  migrations.py
app/cs2/: __init__.py  capture.py  grab_cf.py  http.py  matches.py  selectors.py
app/jobs/: run.py  scheduler.py
app/models/: __init__.py
app/ratings/: dimensions.py
app/scrapers/: _util.py  capture.py  events.py  match_detail.py  matches.py  players.py  rankings.py  selectors.py  stats.py  stats_recon.py  teams.py  verify.py
app/services/: refresh.py  refresh_cs2.py  search.py  trends.py
deploy/: vlr-api.service  vlr-scheduler.service
frontend/: .env.example  CLAUDE.md  FEATURES.md  OPEN-ITEM-team-detail-500.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  landing.test.ts  layout.tsx  page.tsx  player.test.ts
frontend/src/components/: Badge.tsx  FeaturedStreamers.tsx  LiveBadge.tsx  LiveMatchDetail.tsx  LiveMatches.tsx  LiveStatTicker.tsx  MapTabs.tsx  MatchCard.tsx  MatchHeader.tsx  MatchSection.tsx  NewsPanel.tsx  Panel.tsx  PlayerCard.tsx  PlayerMatchesPanel.tsx  PlayerSearch.tsx  (+23 more)
tests/: test_backfill.py  test_dimensions.py  test_live_refresh.py  test_match_detail.py  test_player_trends.py  test_prefetch.py  test_rankings_region.py  test_scrapers.py  test_search.py  test_stats.py  test_status.py  test_team_404.py  test_teams.py  test_trends.py
tests/cs2/: test_grab_cf.py  test_http.py  test_matches.py  test_routes_results.py  test_upcoming.py
tests/fixtures/: dimensions_cohort.html  events.html  match_detail_completed.html  match_detail_live.html  match_detail_live_2.html  news.html  player_johnqt.html  player_tenz.html  player_victor.html  rankings.html  rankings_regional.html  results.html  stats_na.html  team_sentinels.html  upcoming.html
(+44 files in other folders)
