[project]
name = "vlr-api"
version = "0.1.0"
description = "Self-hosted VLR.gg REST API with history"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "apscheduler>=3.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # CS2 (HLTV) scraping — cloudscraper impersonates a real browser TLS fingerprint
    # to bypass the basic Cloudflare challenge. Async via run_in_executor because
    # cloudscraper itself is sync (the underlying requests lib). Used by app/cs2/.
    "cloudscraper>=1.2.71",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "anyio>=4.6"]
# Only needed to run app/cs2/grab_cf.py (the manual cf_clearance refresh script).
# Not a runtime dependency of the API/scheduler — cloudscraper alone is enough
# once a valid cookie is on hand. Requires a system Chromium/Chrome binary.
scrape-browser = ["nodriver>=0.36"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_network: tests that hit HLTV.org — run manually on the Mewtwo container, skipped in CI",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
